src/styles/welcome.scss
@import 'main';

.welcome-background {
    height: 100vh;
    width: 100vw;
    background-image: url("./truck-d-min.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}
.welcome-header {
    height: 10vh;
    width: 100%;
    padding-right: 40px;
    display: flex;
    justify-content: flex-end;
    // flex-direction: row;
}
.logo-cont {
    height: 163.4px;
    width: 245px;
    position: absolute;
    top: 20px;
    left: 40px;
    box-shadow: 0 0 131px 58px rgba(0,0,0,0.549);
    .logo {
        height: 100%;
        width: 100%;
        background-image: url('./LogoLTealG.png');
        background-size: contain;
        background-repeat: no-repeat;
    }
}
.welcome-menu {
    display: flex;
    align-items: center;
    box-shadow: 0 0 131px 58px rgba(0,0,0,0.6);
    background: rgba(0,0,0,0.55);
    ul {
        display: flex;
        flex-direction: row;
        li {
            font-family: $font1;
            color: $white;
            font-size: 30px;
            padding: 6px;
        }
        li:after {
          display:block;
          content: '';
          border-bottom: solid 3px $orange;
          transform: scaleX(0.0001);
          transition: transform 250ms ease-in-out;
        }
        li:hover:after {
             transform: scaleX(1)
        }

    }
}
.welcome-container {
    height: 80vh;
    display: flex;
    align-items: center;
    justify-content: center;
    h1 {
        font-family: $font1;
        font-size: 50px;
        color: $white;
    }
    .title-bar {
        background-color: $teal;
        height: 4px;
        width: 45%;
        margin: 15px;
    }
    h3 {
        font-family: $font1;
        font-size: 25px;
        color: $white;
        margin-bottom: 30px;
    }
    .welcome-button-container {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 40px;
    }
    button {
        background: $teal;
        color: $white;
        padding: 10px;
        font-size: 15px;
        width: 200px;
        transition: 0.3s;

    }

    button:hover {
        width: 220px;
        font-size: 17px;
        transition: 0.3s;
        background: $orange;
    }
    button:focus {
        outline: 0;
    }
}
.welcome-content {
    height: 250px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: 0 0 131px 58px rgba(0,0,0,0.6);
    background: rgba(0,0,0,0.55);
}
.welcome-footer {
    height: 10vh;
    width: 100%;
    padding-left: 40px;
    padding-right: 40px;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    .footer-menu {
        display: flex;
        align-items: center;
        box-shadow: 0 0 131px 58px rgba(0,0,0,0.6);
        background: rgba(0,0,0,0.55);
        ul {
            display: flex;
            flex-direction: row;
        }
        li {
            font-family: $font1;
            color: $white;
            font-size: 30px;
            padding: 6px;
        }
    }
}
.welcome-sloped-cont {

  position: relative;

  .slope-content{
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    padding-top: 20vh;
    // padding-bottom: 20vh;

    position: absolute;
    top: -116px;
    z-index: 200;

    // transform: rotate(3deg);
    h3 {
        font-family: $font1;
        font-size: 40px;
        color: $white;
        margin-bottom: 40px;

    }
    .slope-content-lower{

      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: space-between;


      .slope-content-lower-left{
        display: flex;
        align-items: center;
        justify-content: center;
        width: 70vw;
        padding-left: 100px;

        p{
          font-family: $font1;
          color: $white;
          font-size: 22px;
          margin-top: 25px;



        }
      }

.slope-content-lower-right{
  width: 25vw;
  display: flex;
  align-items: center;
  justify-content: center;


      .welcome-circle{
        border-radius: 100px;
        height: 200px;
        width: 200px;
        background: $white;
        position: relative;

        .icon-map{
          color: $teal;
          font-size: 100px;
          position: absolute;
          top: 50px;
          left:50px;

          .icon-map-marker{
            font-size: 30px;
            color: $orange;
          }

          .marker-one{
            position: absolute;
            top: 45px;
            left:70px;
          }
          .marker-two{
            position: absolute;
            top: 13px;
            left:3px;
          }
        }

        .icon-line-chart{
          color: $teal;
          font-size: 100px;
          position: absolute;
          top: 50px;
          left:50px;
        }
      }

    }

    }


  }


    .welcome-sloped {
        margin: 0 -100px;
        background: $teal;
        transform-origin: left center;
        transform: rotate(-3deg);
        // margin-top: -20px;
        height: 35vh;

    }

    .welcome-mid-section{
      height: 10vh;
      width: 100%;
      background: $teal;

      margin-top: -80px;
      margin-bottom: -80px;

    }

    .welcome-neg-sloped{
      margin: 0 -100px;
      background: $teal;
      transform-origin: left center;
      transform: rotate(2deg);
      // margin-top: -20px;
      height: 35vh;

    }

    .welcome-bottom-section{
      height: 30vh;
      width: 100%;
      background: $teal;

      margin-top: -80px;


    }

}
.welcome-driving {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    padding: 100px 100px 100px;


    background-image: url('./road.jpeg');
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100vw;

    .driving-content-view{

      margin-top: 80px;
      width: 55%;
      box-shadow: 0 0 131px 58px rgba(0,0,0,0.6);
      background: rgba(0,0,0,0.55);

      .driving-content-header{

        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;


        h3{
          font-family: $font1;
          font-size: 40px;
          color: $white;
        }

        .title-bar {
            background-color: $orange;
            height: 4px;
            width: 45%;
            margin: 15px;
        }

      }


      p{
        font-family: $font1;
        color: $white;
        font-size: 22px;
        text-align: center;
        margin-top: 25px;

      }




    }


    ul{
      display: flex;
      flex-direction: column;
      box-shadow: 0 0 131px 58px rgba(0,0,0,0.6);
      background: rgba(0,0,0,0.55);
      li{
        display: flex;
        flex-direction: row;
        padding: 6px;
        margin: 20px;
        div{
          color: $teal;
          margin-right: 20px;
          font-size: 30px;
        }

        p{
          font-family: $font1;
          color: $white;
          font-size: 30px;
          border-bottom: transparent 3px solid ;
        }
        p:after{
          display:block;
          content: '';
          border-bottom: solid 3px $orange;
          transform: scaleX(0.0001);
          transition: transform 250ms ease-in-out;
        }
        p:hover:after {
             transform: scaleX(1)
        }

      }

    }
}

